bdr.BDR.scala.error
Compilation error:
BDR:1: error: unclosed character literal
indic = ''
        ^BDR:1: error: illegal start of simple expression
indic = ''
        ^